2005-12-03 Niklas Knutsson  <nq@altern.org>

	* Display "x < 3 && x > 1" as "1 < x < 3"

2005-12-01 Niklas Knutsson  <nq@altern.org>

	* Make sure that window does not expand when updating status text

2005-11-29 Niklas Knutsson  <nq@altern.org>

	* Do not display (x)(y)^z with multiplication sign
	* No double quotes in set unknowns dialog
	* Set max precision to 100000

2005-11-27 Niklas Knutsson  <nq@altern.org>
	
	* Update assumption menu items and combo boxes (in edit unknown variable dialog) 
	  after setting sign or type (ex. setting sign to positive makes type at least real)

2005-11-26 Niklas Knutsson  <nq@altern.org>

	* Do not start command thread more than once

2005-11-24 Niklas Knutsson  <nq@altern.org>

	* Never display 1/x as (1)/x no matter how deeply nested

2005-11-23 Niklas Knutsson  <nq@altern.org>

	* Do not split up utf8 characters and search for spaces when wrapping very long results

2005-11-22 Niklas Knutsson  <nq@altern.org>

	* Factorize and simplify in a separate thread that can be stopped and show progress dialog
	* Add "Enable/Disable Completion", "Read Precision", "Limit Implicit Multiplication", "RPN Mode", and "Meta Modes"
	  to expression entry popup menu
	* Add "Clear" to history popup menu
	* Allow factorization print option (for (3/4*(x+1))/(y+1))

2005-11-19 Niklas Knutsson  <nq@altern.org>

	* Do not display colon when argument description is empty

2005-11-17 Niklas Knutsson  <nq@altern.org>

	* Simplify menu item
	* Algebraic mode -- simplify, factorize, or none

2005-11-07 Niklas Knutsson  <nq@altern.org>

	* Fix crash when newline character at end of expression (from pasted text)
	* Do not add plot expression with only white space
	* Do not automatically add plot expression when applying appearance or function range
	* Replace new line characters in expression entry with space

2005-11-06 Niklas Knutsson  <nq@altern.org>

	* Fixes for gtk+ version 2.4

2005-11-05 Niklas Knutsson  <nq@altern.org>
