@@ -1171,6 +1171,17 @@
 			      <signal name="activate" handler="on_menu_item_assumptions_none_activate" last_modification_time="Wed, 16 Jun 2004 10:14:23 GMT"/>
 			    </widget>
 			  </child>
+			  
+			  <child>
+			    <widget class="GtkRadioMenuItem" id="menu_item_assumptions_nonmatrix">
+			      <property name="visible">True</property>
+			      <property name="label" translatable="yes">Not Matrix</property>
+			      <property name="use_underline">True</property>
+			      <property name="active">False</property>
+			      <property name="group">menu_item_assumptions_none</property>
+			      <signal name="activate" handler="on_menu_item_assumptions_nonmatrix_activate" last_modification_time="Wed, 16 Jun 2004 10:14:23 GMT"/>
+			    </widget>
+			  </child>
 
 			  <child>
 			    <widget class="GtkRadioMenuItem" id="menu_item_assumptions_number">
